--- a/index.html
+++ b/index.html
@@ -17,12 +17,97 @@
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 
     <!-- <link rel="stylesheet" href="css/app.css"> -->
+    <link rel="stylesheet" type="text/css" href="bundle/app.css">
+    <script type="text/javascript" src="node_modules/gsap/src/uncompressed/TweenMax.js"></script>
 
 </head>
 <body>
+    <!-- Slider Control -->
+    <div id="slider-control">
+      <a href="#intro-section" class="active"><div class="dot"></div></a>
+      <a href="#native"><div class="dot"></div></a>
+      <a href="#touch"><div class="dot"></div></a>
+      <a href="#android"><div class="dot"></div></a>
+    </div>
 
-<h1>I Love React</h1>
-<!-- <script src="js/app.js"></script> -->
+    <!--  Main Body -->
+    <div id="intro-section" class="section-1 section">
+        <div class="overlay"></div>
+        <div>
+        <img id="react-logo" src="img/react-logo.svg"/>
+        <h2 class="title">Build Native Apps With React</h2>
+        </div>
+
+        <div class="nav-bar">
+          <a href="#native">
+  Native iOS
+          </a>
+
+          <a href="#touch">
+  Touch Handling
+         </a>
+
+         <a href="#async">
+  Asynchronous
+         </a>
+
+         <a href="#flex">
+  Flex &amp; Styling
+         </a>
+       </div>
+    </div>
+    <div id="native" class="section-2 section">
+        <div class="iphone-demo">
+          <div class="iphone-image">
+            <img src="img/iphone-frame.svg"/>
+            <img class="screen-image" src="img/tumblr-demo.jpg"/>
+          </div>
+        </div>
+
+        <div class="feature-description">
+          <h2>Native Experience</h2>
+          <p>
+    Takes advantage of native iOS components to give your app
+    a consistent look and feel with the rest of the platform ecosystem,
+    and keeps the quality bar high.
+          </p>
+        </div>
+    </div>
+    <div id="touch" class="section-3 section">
+       <div class="iphone-demo">
+         <div class="iphone-image">
+           <img src="img/iphone-frame.svg"/>
+           <img class="screen-image" src="img/swype-demo.jpg"/>
+         </div>
+       </div>
+
+      <div class="feature-description">
+        <h2>Touches &amp; Gestures</h2>
+        <p>
+    React Native implements a powerful responder system to
+    negotiate touches in complex view hierarchies. It allows you
+    to build complex UI, and handle user interactions precisely.
+        </p>
+      </div> 
+    </div>
+    <div id="android" class="section-4 section">
+      <h2>Android Is Here</h2>
+      <div class="android-robot">
+        <div class="android-p" id="robot">
+          <img src="img/android-robot.svg"/>
+        </div>
+      </div>
+    </div>
+
+<script type="text/javascript">
+window.onload = function() {
+  animateLogo();
+  animateRobot();
+  updateSliderControl();
+};
+</script>
+    
+<script src="js/app.js"></script>
 
 </body>
 </html>
